@@ -1,6 +1,11 @@
 2019-08-29  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2019-06-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/90733
+	* gcc.dg/pr90733.c: New test.
+
 	2019-05-10  Jakub Jelinek  <jakub@redhat.com>
 
 	PR pch/90326
